[project]
name = "entrophier"
version = "0.1.0"
description = "A configurable Python tool for detecting and redacting sensitive data using entropy analysis and pattern matching"
readme = "README.md"
authors = [
    { name = "Python Entrophier Contributors" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.0",
]
keywords = ["entropy", "redaction", "security", "privacy", "data-sanitization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/rjury-sumo/python-entrophier"
Documentation = "https://github.com/rjury-sumo/python-entrophier#readme"

[project.scripts]
entrophier = "entrophier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entrophier"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
