[project]
name = "entrophier"
version = "0.1.0"
description = "A configurable Python tool for detecting and redacting sensitive data using entropy analysis and pattern matching"
readme = "README.md"
authors = [
    { name = "Python Entrophier Contributors", email = "noreply@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.0",
]
keywords = ["entropy", "redaction", "security", "privacy", "data-sanitization", "pii", "log-sanitization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/rjury-sumo/python-entrophier"
Documentation = "https://github.com/rjury-sumo/python-entrophier#readme"
"Bug Tracker" = "https://github.com/rjury-sumo/python-entrophier/issues"
Changelog = "https://github.com/rjury-sumo/python-entrophier/blob/main/CHANGELOG.md"

[project.scripts]
entrophier = "entrophier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entrophier"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
